[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/art/sc_level/sprites/basketball/basketball.png" type="Texture" id=1]
[ext_resource path="res://assets/code/sc_level/basketball.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/sc_level/Basketball-BallBounce.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[node name="basketball" type="RigidBody2D" groups=[
"enemy",
"projectile",
]]
collision_layer = 2
collision_mask = 8
gravity_scale = 10.0
contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource( 2 )

[node name="basketball_sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="model" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="hitbox" type="Area2D" parent="." groups=[
"enemy",
"hurtbox",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
modulate = Color( 0.0470588, 0.243137, 0.901961, 1 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_basketball_body_entered"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
